<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:text="@string/release_date" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="136dp"
            android:layout_height="196dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"
            tools:textDirection="@tools:sample/avatars" />

        <TextView
            android:id="@+id/movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_release_date"
            app:layout_constraintTop_toTopOf="@+id/movie_release_date"
            tools:text="@string/vote_average" />

        <CheckBox
            android:id="@+id/favorite_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:text="@string/checkbox_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

        <TextView
            android:id="@+id/textViewOverviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/movie_plot_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOverviewLabel"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/textViewVideosLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/videos_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_plot_synopsis" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewVideosLabel" />

        <TextView
            android:id="@+id/textViewReviewsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reviews_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="@+id/textViewVideosLabel"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_videos" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReviewsLabel"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="212dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/detail_pb_loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="236dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
